--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ titulo }}</title>
+    <title>Mi Propia IA - Mateo Martín Castro</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <script>
         function mostrarCampoBusqueda() {
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div class="container-main">
-        <h1>{{ titulo }}</h1>
+        <h1>Mi Propia IA - Mateo Martín Castro</h1>
 
         <form action="/buscar" method="POST" class="card">
             <label for="tipo_busqueda">Buscar por:</label>
@@ -63,7 +63,7 @@
         </div>
     </div>
     <div class="footer">
-        <p>© 2025 Proyecto Personal - Mateo Martín</p>
+        <p>© 2025 Mi Propia IA - Mateo Martín Castro</p>
     </div>
 </body>
 </html>
