--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,10 @@
             const currentPath = window.location.pathname;
             const navLinks = document.querySelectorAll('.navbar-item a');
             navLinks.forEach(link => {
-                if (link.getAttribute('href') === currentPath) {
+                // Modificado para resaltar "Informe del Proyecto" si la ruta es /informe_proyecto
+                if (currentPath === '/informe_proyecto' && link.getAttribute('href') === '/informe_proyecto') {
+                    link.classList.add('active');
+                } else if (link.getAttribute('href') === currentPath) {
                     link.classList.add('active');
                 }
             });
@@ -38,7 +41,8 @@
             <div class="navbar-item"><a href="/">Herramienta Principal</a></div>
             <div class="navbar-item"><a href="/informacion">Información Clave</a></div>
             <div class="navbar-item"><a href="/test">Test de Conocimientos</a></div>
-            <div class="navbar-item"><a href="{{ url_for('static', filename='docs/informe-proyecto.pdf') }}" target="_blank">Informe del Proyecto</a></div>
+            <!-- Enlace actualizado para abrir el PDF dentro de la página -->
+            <div class="navbar-item"><a href="/informe_proyecto">Informe del Proyecto</a></div>
         </div>
     </nav>
 
